--- a/porfo-ui/src/styles.scss
+++ b/porfo-ui/src/styles.scss
@@ -8,7 +8,7 @@
     background-color: rgb(78, 15, 129);
     mask-size: 11em;
     mask-position: center;
-    min-width: 24em;
+    min-width: 20em;
 }
 
 .logoContainer{
